--- a/manager/src/main/res/layout/appbar_fragment_activity.xml
+++ b/manager/src/main/res/layout/appbar_fragment_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
@@ -18,5 +18,5 @@
 
     <include layout="@layout/appbar" />
 
-</FrameLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
