--- a/manager/src/main/res/values/colors.xml
+++ b/manager/src/main/res/values/colors.xml
@@ -4,4 +4,61 @@
 
     <color name="app_color_light">#3F51B5</color>
     <color name="app_color_dark">#B1B8DF</color>
+
+    <color name="md_theme_light_primary">#4355B9</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#DDE0FF</color>
+    <color name="md_theme_light_onPrimaryContainer">#000D61</color>
+    <color name="md_theme_light_secondary">#5B5D71</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#E0E1FA</color>
+    <color name="md_theme_light_onSecondaryContainer">#171A2C</color>
+    <color name="md_theme_light_tertiary">#77536D</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#FFD7F3</color>
+    <color name="md_theme_light_onTertiaryContainer">#2D1228</color>
+    <color name="md_theme_light_error">#BA1B1B</color>
+    <color name="md_theme_light_errorContainer">#FFDAD4</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410001</color>
+    <color name="md_theme_light_background">#FEFBFF</color>
+    <color name="md_theme_light_onBackground">#1B1B1F</color>
+    <color name="md_theme_light_surface">#FEFBFF</color>
+    <color name="md_theme_light_onSurface">#1B1B1F</color>
+    <color name="md_theme_light_surfaceVariant">#E3E1EC</color>
+    <color name="md_theme_light_onSurfaceVariant">#46464F</color>
+    <color name="md_theme_light_outline">#767680</color>
+    <color name="md_theme_light_inverseOnSurface">#F3F0F5</color>
+    <color name="md_theme_light_inverseSurface">#303034</color>
+    <color name="md_theme_light_inversePrimary">#B9C3FF</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_primaryInverse">#B9C3FF</color>
+    <color name="md_theme_dark_primary">#B9C3FF</color>
+    <color name="md_theme_dark_onPrimary">#08218A</color>
+    <color name="md_theme_dark_primaryContainer">#293CA0</color>
+    <color name="md_theme_dark_onPrimaryContainer">#DDE0FF</color>
+    <color name="md_theme_dark_secondary">#C4C5DD</color>
+    <color name="md_theme_dark_onSecondary">#2D2F42</color>
+    <color name="md_theme_dark_secondaryContainer">#43465A</color>
+    <color name="md_theme_dark_onSecondaryContainer">#E0E1FA</color>
+    <color name="md_theme_dark_tertiary">#E5BAD7</color>
+    <color name="md_theme_dark_onTertiary">#45263E</color>
+    <color name="md_theme_dark_tertiaryContainer">#5D3C55</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FFD7F3</color>
+    <color name="md_theme_dark_error">#FFB4A9</color>
+    <color name="md_theme_dark_errorContainer">#930006</color>
+    <color name="md_theme_dark_onError">#680003</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD4</color>
+    <color name="md_theme_dark_background">#1B1B1F</color>
+    <color name="md_theme_dark_onBackground">#E4E1E6</color>
+    <color name="md_theme_dark_surface">#1B1B1F</color>
+    <color name="md_theme_dark_onSurface">#E4E1E6</color>
+    <color name="md_theme_dark_surfaceVariant">#46464F</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C6C5D0</color>
+    <color name="md_theme_dark_outline">#90909A</color>
+    <color name="md_theme_dark_inverseOnSurface">#1B1B1F</color>
+    <color name="md_theme_dark_inverseSurface">#E4E1E6</color>
+    <color name="md_theme_dark_inversePrimary">#4355B9</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_primaryInverse">#4355B9</color>
 </resources>
