--- a/manager/src/main/res/layout/home_start_adb.xml
+++ b/manager/src/main/res/layout/home_start_adb.xml
@@ -3,20 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="?homeCardStyle"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingStart="0dp"
-    android:paddingEnd="0dp"
-    android:paddingBottom="8dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp">
+        android:orientation="horizontal">
 
         <moe.shizuku.manager.widget.MaterialCircleIconView
             android:id="@android:id/icon"
@@ -31,9 +24,10 @@
             style="@style/CardTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/home_icon_padding"
             android:layout_weight="1"
             android:text="@string/home_adb_title" />
+
     </LinearLayout>
 
     <TextView
@@ -41,16 +35,17 @@
         style="@style/CardSummary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="24dp"
         tools:htmlText="@string/home_adb_description" />
 
-    <TextView
+    <com.google.android.material.button.MaterialButton
         android:id="@android:id/button1"
         style="@style/CardButton"
-        android:drawableStart="@drawable/ic_code_24dp"
-        android:text="@string/home_adb_button_view_command" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/home_adb_button_view_command"
+        app:icon="@drawable/ic_code_24dp" />
 
 </LinearLayout>
