--- a/manager/src/main/res/layout/home_start_root.xml
+++ b/manager/src/main/res/layout/home_start_root.xml
@@ -5,18 +5,13 @@
     style="?homeCardStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingStart="0dp"
-    android:paddingEnd="0dp"
-    android:paddingBottom="8dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp">
+        android:orientation="horizontal">
 
         <moe.shizuku.manager.widget.MaterialCircleIconView
             android:id="@android:id/icon"
@@ -32,7 +27,7 @@
             style="@style/CardTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/home_icon_padding"
             android:layout_weight="1"
             android:text="@string/home_root_title" />
 
@@ -43,25 +38,24 @@
         style="@style/CardSummary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
         tools:text="@string/home_root_description" />
 
-    <TextView
+    <com.google.android.material.button.MaterialButton
         android:id="@android:id/button1"
         style="@style/CardButton"
-        android:drawableStart="@drawable/ic_server_start_24dp"
         android:enabled="false"
-        android:text="@string/home_root_button_start" />
+        android:text="@string/home_root_button_start"
+        app:icon="@drawable/ic_server_start_24dp" />
 
-    <TextView
+    <com.google.android.material.button.MaterialButton
         android:id="@android:id/button2"
         style="@style/CardButton"
-        android:drawableStart="@drawable/ic_server_restart"
         android:enabled="false"
         android:text="@string/home_root_button_restart"
-        android:visibility="gone" />
+        android:visibility="gone"
+        app:icon="@drawable/ic_server_restart"
+        tools:visibility="visible" />
 
 </LinearLayout>
