--- a/manager/src/main/res/values-v21/themes_override.xml
+++ b/manager/src/main/res/values-v21/themes_override.xml
@@ -24,7 +24,7 @@
         <item name="useMaterialThemeColors">true</item>
     </style>
 
-    <style name="PreferenceSummaryTextStyle" tools:override="true">
+    <!--<style name="PreferenceSummaryTextStyle" tools:override="true">
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textAllCaps">false</item>
@@ -36,8 +36,8 @@
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:textSize">11sp</item>
-        <!-- 0.8 Spacing, 0.8/11 = 0.072727273 -->
+        &lt;!&ndash; 0.8 Spacing, 0.8/11 = 0.072727273 &ndash;&gt;
         <item name="android:letterSpacing">0.072727273</item>
-    </style>
+    </style>-->
 
 </resources>
