Adjust home card style

--- a/manager/src/main/res/layout/home_item_container.xml
+++ b/manager/src/main/res/layout/home_item_container.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="?attr/materialCardViewFilledStyle"
-    app:cardBackgroundColor="?attr/colorSurface2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:checkable="true"
     android:clickable="true"
     android:focusable="true"
-    app:cardCornerRadius="24dp"
+    app:cardBackgroundColor="@color/home_card_overlay_color"
+    app:cardCornerRadius="28dp"
     tools:layout_height="100dp"
     tools:layout_margin="24dp" />
